<resources>
    <string name="app_name">MyApp</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_maps">Map</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="signin">Sign in</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="have_account">Already have an account? Login</string>
    <string name="update">Update</string>
    <string-array name="recherch">
        <item name="first">first</item>
        <item name="second">second</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
