<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/login_background"
    tools:context=".LoginActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="240dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:padding="16dp"
                android:src="@drawable/bike" />
            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:background="@android:color/transparent"
                android:drawablePadding="12dp"
                android:padding="8dp"
                android:hint="@string/username"
                android:maxLines="1"
                android:drawableLeft="@drawable/user_black_24"
                android:layout_marginTop="70dp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000"/>
            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:background="@android:color/transparent"
                android:drawablePadding="12dp"
                android:padding="8dp"
                android:hint="@string/password"
                android:maxLines="1"
                android:drawableLeft="@drawable/lock_black_24"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000"/>
            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />
            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_button_login"
                android:text="@string/login"
                android:textColor="#fff"
                android:layout_marginTop="30dp"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textSize="20dp"
                android:clickable="true"/>
            <Button
                android:id="@+id/sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_signup_button"
                android:text="@string/signup"
                android:textColor="#fff"
                android:layout_marginTop="10dp"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textSize="20dp"
                android:clickable="true"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>